# exoctl

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  configuration.toml  feedyara.rules.save_stream  post.lua  rules.yarc
benchmark/: CMakeLists.txt  benchmark_engine.cxx
benchmark/crowapp/focades/data/: CMakeLists.txt  metadata.cxx  metadata.hxx
benchmark/crypto/: CMakeLists.txt  crypto.cxx  crypto.hxx
benchmark/data/: CMakeLists.txt  metadata.cxx  metadata.hxx
benchmark/parser/: CMakeLists.txt  json.cxx  json.hxx  toml.cxx  toml.hxx
benchmark/server/focades/data/: CMakeLists.txt  metadata.cxx  metadata.hxx
sources/: CMakeLists.txt  console.hxx  engine-sock.cxx  engine.cxx  log.hxx  main.cxx  program.cxx  program.hxx
sources/app/: appengine-prod-1.rockspec  exoctl.cxx
sources/app/config/: exoctl.conf  exoctl.ini
sources/app/core/: App.lua
sources/app/database/migrations/: user.sql
sources/app/database/schema/: user.sql
sources/app/plugins/: status.lua  version.lua
sources/app/plugins/records/: config.ini  download.lua  records.lua  records_manager.lua  server.lua  strings.lua
sources/app/plugins/yara_gate/: config.ini  get_compiled_rules.lua  get_rules.lua  server.lua  set_disable_rules.lua  set_enable_rules.lua  set_load_rules.lua  yara_gate.lua  yara_manager.lua
sources/application/: _plugins.inc  application.cxx  application.hxx
sources/application/anti/debug/: debug.cxx  debug.hxx
sources/cache/: cache.cxx
sources/crow/: conn.cxx  conn.hxx  crow.cxx  crow.hxx  endpoints.hxx  routes.cxx  routes.hxx
sources/crowapi/: CMakeLists.txt  crow.cxx  crow.hxx  crowapi.cxx  rnames.hxx  routes.cxx  routes.hxx
sources/crowsocket/: CMakeLists.txt  conn.cxx  conn.hxx  crow.cxx  crow.hxx  routes.cxx  routes.hxx  websocket.cxx
sources/database/postgresql/: postgresql.cxx  postgresql.hxx
sources/dto/: analysis.cxx
sources/dto/analysis/: analysis.cxx
sources/engine/: CMakeLists.txt  _plugins.inc  cache.cxx  dto.cxx  engine.cxx  engine.hxx  engine_exception.cxx  engine_exception.hxx  exception.cxx  exception.hxx  log.cxx  logging.cxx
sources/engine/analysis/: analysis.cxx  scan_packed.cxx  scan_sig_packed.cxx  scan_yara.cxx  search_yara.hxx  shash.cxx  syara.cxx
sources/engine/bind/lua/: engine.cxx
sources/engine/bridge/: bridge.cxx  bridge.hxx  entitys.hxx  exception.cxx  exception.hxx
sources/engine/bridge/endpoints/: analysis.cxx  analysis.hxx  data.cxx  data.hxx  parser.cxx  parser.hxx  plugins.cxx  reverse.cxx  reverse.hxx
sources/engine/bridge/extend/: bridge.cxx  bridge.hxx
sources/engine/bridge/map/: map.cxx  map.hxx
sources/engine/bridge/plugin/: bridge.cxx
sources/engine/configuration/: configuration.cxx  exception.cxx
sources/engine/configuration/extend/: configuration.cxx
sources/engine/configuration/plugin/: configuration.cxx
sources/engine/crow/: conn.cxx  crow.cxx  crow.hxx  crow_exception.cxx  crow_exception.hxx  endpoints.hxx  log.cxx  log.hxx  routes.cxx  routes.hxx
sources/engine/crow/conn/: conn.cxx  conn.hxx
sources/engine/crow/log/: log.cxx  log.hxx
sources/engine/crow/routes/: endpoints.hxx  routes.cxx  routes.hxx  routes_types.hxx  websocket.cxx  websocket.hxx
sources/engine/crowapp/: crowapp.cxx  crowapp.hxx  exception.cxx  exception.hxx
sources/engine/crowapp/bridge/: bridge.cxx  bridge.hxx  entitys.hxx
sources/engine/crowapp/log/: log.cxx  log.hxx
sources/engine/crowapp/middlewares/: auth.hxx
sources/engine/crypto/: sha.cxx  tlsh.cxx
sources/engine/crypto/extend/: sha.cxx
sources/engine/data/: data_exception.cxx  magic.cxx  metadata.cxx
sources/engine/database/: database.cxx  exception.cxx  postgresql.cxx
sources/engine/database/extend/: database.cxx
sources/engine/database/sqlite3/: exception.cxx  sqlite3.cxx
sources/engine/decompiler/c/: elf.cxx  macho.cxx  pe.cxx
sources/engine/decompiler/llama/: exception.cxx  llama.cxx
sources/engine/disassembly/capstone/: capstone.cxx  capstone_exception.cxx  exception.cxx
sources/engine/dll/: dll.cxx
sources/engine/dlopen/: dlopen.cxx
sources/engine/dto/: analysis.cxx  dto.cxx  dto_exception.cxx
sources/engine/emergency/: emergency.cxx
sources/engine/filesystem/: filesystem.cxx
sources/engine/filesystem/extend/: filesystem.cxx
sources/engine/focades/analysis/: analysis.cxx  analysis.hxx  entitys.hxx  exception.cxx  exception.hxx
sources/engine/llama/: exception.cxx  llama.cxx
sources/engine/llama/_/: log.cxx  log.hxx
sources/engine/llama/extend/: llama.cxx
sources/engine/logging/: logging.cxx
sources/engine/logging/extend/: logging.cxx
sources/engine/logging/plugin/: logging.cxx
sources/engine/lua/: exception.cxx  lua.cxx
sources/engine/magic/: exception.cxx  magic.cxx  magic_exception.cxx
sources/engine/magic/extend/: magic.cxx
sources/engine/memory/: exception.cxx  memory.cxx
sources/engine/parser/: elf.cxx  json.cxx  toml.cxx
sources/engine/parser/binary/: elf.cxx  macho.cxx
sources/engine/parser/json/: exception.cxx  json.cxx
sources/engine/plugins/: exception.cxx  lua.cxx  lua.hxx  plugins.cxx
sources/engine/security/: yara.cxx
sources/engine/security/clamav/: clamav.cxx  clamav_exception.cxx  exception.cxx
sources/engine/security/signatures/: exception.cxx  (+2 more)
sources/engine/server/: exception.cxx  server.cxx  server.hxx
sources/engine/signals/: signals.cxx
sources/engine/version/: version.cxx
sources/log/: log.cxx
sources/memory/: memory.cxx
sources/parser/json/: json.cxx
sources/parser/toml/: toml.cxx
sources/program/: program.cxx  program.hxx
sources/scan/: scan.cxx
sources/scan/hash/: shash.cxx  shash.hxx
sources/scan/yara/: syara.cxx  syara.hxx
sources/toml/: toml.cxx
tests/: CMakeLists.txt
tests/crypto/: CMakeLists.txt  crypto.cxx  crypto.hxx
tests/disassembly/capstone/: CMakeLists.txt  capstone.cxx  capstone.hxx
tests/magic/: CMakeLists.txt  magic.cxx  magic.hxx
tests/parser/: CMakeLists.txt  toml.cxx  toml.hxx
tests/security/yara/: CMakeLists.txt  yara.cxx  yara.hxx
(+600 files in other folders)
